can't touch this v1

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                muted
                playsinline
                webkit-playsinline
-               disablePictureInPicture
-               controls="false">
+               disablePictureInPicture>
             <source src="" type="video/webm">
         </video>
     </div>
