docs and mobile nav  icons fixed + README

--- a/index.html
+++ b/index.html
@@ -108,16 +108,12 @@
         </button>
         
         <button class="nav-item" data-state="3">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-            </svg>
+            <img src="assets/ui-icons/nav-bar/cpu.svg" class="nav-icon" alt="Chamber Icon">
             <span class="nav-text">Chamber</span>
         </button>
         
         <button class="nav-item" data-state="5">
-            <svg class="nav-icon" viewBox="0 0 24 24">
-                <path d="M9 4v1.38c-.83-.33-1.72-.5-2.61-.5-1.79 0-3.58.68-4.95 2.05l3.33 3.33h1.11v1.11c.86.86 1.98 1.31 3.11 1.36V15H6v3c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2v-3h-2.99v-2.26c1.13-.05 2.25-.5 3.11-1.36V10.5h1.11l3.33-3.33c-1.37-1.37-3.16-2.05-4.95-2.05-.89 0-1.78.17-2.61.5V4H9z"/>
-            </svg>
+            <img src ="assets/ui-icons/nav-bar/monitor-cog.svg" class="nav-icon" alt="Technology Icon">
             <span class="nav-text">Technology</span>
         </button>
     </div>
