linked the modules to the index and the levels to each other

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
             <div class="attribution">
                 IX- created by <img src="assets/ui-icons/Muza-rect2.png" alt="Muza" class="attribution-icon"> 
                 <a href="https://muzapro.github.io/practice-zone/portfolio/portfolio-white.html" target="_blank" class="attribution-link">Muza Productions</a>
+                <span class="footer-separator">|</span>
+                <a href="pqc-sim/lvl1.html" class="demo-link" title="Interactive Quantum Demo">
+                    <img src="assets/ui-icons/graduation-cap.svg" alt="Demo" class="demo-icon">
+                </a>
             </div>
         </div>
     </div>
@@ -134,6 +138,10 @@
         <div class="attribution">
             IX- created by <img src="assets/ui-icons/Muza-rect2.png" alt="Muza" class="attribution-icon"> 
             <a href="https://muzapro.github.io/practice-zone/portfolio/portfolio-white.html" target="_blank" class="attribution-link">Muza Productions</a>
+            <span class="footer-separator">|</span>
+            <a href="pqc-sim/lvl1.html" class="demo-link" title="Interactive Quantum Demo">
+                <img src="assets/ui-icons/graduation-cap.svg" alt="Demo" class="demo-icon">
+            </a>
         </div>
     </div>
 
