--- a/pqc-sim/lvl1.html
+++ b/pqc-sim/lvl1.html
@@ -35,18 +35,40 @@
             background: var(--menu-bar);
             padding: 1rem 2rem;
             border-bottom: 2px solid var(--secondary);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
-        .header h1 {
+        .header-content h1 {
             color: var(--accent);
             font-weight: 700;
             font-size: 1.5rem;
         }
 
-        .header p {
+        .header-content p {
             color: #ccc;
             margin-top: 0.5rem;
             font-size: 0.9rem;
+        }
+
+        .nav-button {
+            background: var(--secondary);
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
+            color: white;
+            font-family: 'Overpass', sans-serif;
+            font-weight: 600;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
+        }
+
+        .nav-button:hover {
+            background: var(--accent);
+            transform: translateY(-2px);
         }
 
         .main-container {
@@ -426,8 +448,11 @@
 </head>
 <body>
     <div class="header">
-        <h1>W-System Quantum Computing Demo</h1>
-        <p>Level 1: Understanding degenerate energy levels and transition pathways</p>
+        <div class="header-content">
+            <h1>W-System Quantum Computing Demo</h1>
+            <p>Level 1: Understanding degenerate energy levels and transition pathways</p>
+        </div>
+        <a href="lvl2.html" class="nav-button">Next Level →</a>
     </div>
 
     <div class="main-container">
