pqc level 3 and menu

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 IX- created by <img src="assets/ui-icons/Muza-rect2.png" alt="Muza" class="attribution-icon"> 
                 <a href="https://muzapro.github.io/practice-zone/portfolio/portfolio-white.html" target="_blank" class="attribution-link">Muza Productions</a>
                 <span class="footer-separator">|</span>
-                <a href="pqc-sim/lvl1.html" class="demo-link" title="Interactive Quantum Demo">
+                <a href="pqc-sim/index.html" class="demo-link" title="Interactive Quantum Simulation">
                     <img src="assets/ui-icons/graduation-cap.svg" alt="Demo" class="demo-icon">
                 </a>
             </div>
