--- a/pqc-sim/lvl2.html
+++ b/pqc-sim/lvl2.html
@@ -400,7 +400,10 @@
             <h1>W-System Quantum Computing Demo</h1>
             <p>Level 2: Multi-atom graph state generation and quantum networking</p>
         </div>
-        <a href="lvl1.html" class="nav-button">← Back to Level 1</a>
+        <div style="display: flex; gap: 1rem;">
+            <a href="lvl1.html" class="nav-button">← Level 1</a>
+            <a href="lvl3.html" class="nav-button">Level 3 →</a>
+        </div>
     </div>
 
     <div class="main-container">
